--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@
 body {
   background: linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 95%));
   font-family: "Josefin Sans", sans-serif;
+  position: relative;
 }
 
 /* hero*/
@@ -114,8 +115,7 @@ body {
 
 /*imagen*/
 .hero-imagen {
-  background: green;
-  height: 100vh;
+   height: 100vh;
   width: 100%;
   overflow: hidden;
  }
@@ -202,7 +202,7 @@ body {
 
 /* footer */
 .footer {
-  position: fixed;
+  position: absolute;
   bottom: 0;
 }
 
